tdf#162551 mso formats: line(vert) or char(hori) forces layoutInCell

Already DOCX compat15 always forces layoutInCell,
but even earlier than 2013, if the shape is oriented
vertically to the line, or horizontally to the character
then everything is treated as if it was layoutInCell.

So let's make it explicit while we import.
That seems to make the most sense.

make CppunitTest_sw_ooxmlexport21 CPPUNIT_TEST_NAME=testTdf162551
make CppunitTest_sw_ww8export4 CPPUNIT_TEST_NAME=testTdf162542

No existing unit tests found.

Change-Id: Ibdb4933e248c86ab595df68f81fad1f23345c2a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172296
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins